Things are broken, but don't want to lose all the work.